# structure-factor

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  gravity_point_process  gravity_point_process_2D.py  hank_lib.ipynb  hankel.ipynb  homogeneous_poisson_process.py  hyperuniformity.html  index.html  multiscale_estimators.html  objects.inv  pair_correlation_function.html  plotting.html  point_pattern.html  point_processes.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  spatial_windows.html  spatial_windows.py  structure_factor.html  tapered_estimators.html  tapered_estimators_isotropic.html  tapers.html  transforms.html  utils.html
.doctrees/: environment.pickle  hyperuniformity.doctree  index.doctree  multiscale_estimators.doctree  pair_correlation_function.doctree  plotting.doctree  point_pattern.doctree  point_processes.doctree  spatial_windows.doctree  structure_factor.doctree  tapered_estimators.doctree  tapered_estimators_isotropic.doctree  tapers.doctree  transforms.doctree  utils.doctree
.doctrees/bibliography/: index.doctree
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/structure_factor/: hyperuniformity.html  multiscale_estimators.html  pair_correlation_function.html  plotting.html  point_pattern.html  point_processes.html  spatial_windows.html  structure_factor.html  tapered_estimators.html  tapered_estimators_isotropic.html  tapers.html  transforms.html  utils.html
_sources/: index.rst.txt  multiscale_estimators.rst.txt  point_pattern.rst.txt  spatial_windows.rst.txt  structure_factor.rst.txt  tapered_estimators.rst.txt  transforms.rst.txt  utils.rst.txt
_static/: basic.css  proof.css
bibliography/: index.html
code/: effective_example.py  pcf_example.py  power_decay_example.py  restrict_pp.py  sf_baddour_example.py  si_example.py
code/hyperuniformity/: effective_hyperuniformity.py
code/pair_correlation_function/: interpolate_pcf.py
code/point_processes/: ginibre_pp.py
code/spatial_window/: subwindow_param_max.py
data/: test_pp.pickle  z2_data.pkl
docs/: conf.py  effective_hyperuniform.rst  hyperuniformity.rst  index.rst  isotropic_estimator.rst  pair_correlation_function.rst  plotting.rst  point_pattern.rst  point_processes.rst  spatial_windows.rst  spatstat_interface.rst  spectral_estimators.rst  structure_factor.rst  tapered_estimators_isotropic.rst  tapers.rst  transforms.rst  utils.rst
docs/bibliography/: bibliography.bib
docs/code/: bin_data.py  effective_example.py  pcf_example.py  plot_point_pattern.py  point_pattern.py  poisson_sample_example.py  power_decay_example.py  restrict_pp.py  sf_baddour_example.py  si_example.py  spatial_window_example.py
docs/code/hyperuniformity/: bin_data.py  effective_hyperuniformity.py  hyperuniformity_class.py  multiscale_test.py  subwindows.py
docs/code/isotropic_estimator/: allowed_k_norm.py  bartlett_estimator.py
docs/code/multiscale_estimators/: coupled_sum_estimator.py  m_threshold.py  multiscale_estimator.py  subwindows.py
docs/code/pair_correlation_function/: estimate_pcf.py  interpolate_pcf.py
docs/code/point_pattern/: point_pattern.py  restrict_pp.py
docs/code/point_processes/: ginibre_pp.py  ginibre_sample.py  kly_matching.py  poisson_pp.py  poisson_sample.py  thomas_pp.py  thomas_sample.py
docs/code/spatial_window/: ball_window.py  box_window.py  check_centered_window.py  check_cubic_window.py
docs/code/structure_factor/: bartlett_isotropic_estimator.py  hankel_quadrature.py  multitapered_estimator.py  multitapered_periodogram.py  scattering_intensity.py  taper.py  tapered_estimator.py  tapered_periodogram.py
docs/plots/: plot_point_pattern.py
estimtator_structure_factor/: estimator_structure_factor.py  test_estimator_structure_factor.ipynb
notebooks/: Poisson-process-and-windows.ipynb  README.md  Tutorial_jupyter_notebook_v_2.ipynb  paper_notebook.ipynb  tapered_periodogram.ipynb  test_StructureFactor.ipynb  test_compute_scattering_intensity.ipynb  test_workflow.ipynb  tutorial_structure_factor.ipynb
notebooks/documentation/: documentation.ipynb
notebooks/paper_notebook/: new_paper_notebook.ipynb
src/hypton/: __init__.py  effective_hyperuniform.py  homogeneous_poisson_process.py  point_pattern.py  spatial_windows.py  spatstat_interface.py  structure_factor.py  transforms.py  utils.py
src/hypton/data/: ginibre_data.pkl  kly_data.pkl  load_data.py  poisson_data.pkl
src/structure_factor/: __init__.py  effective_hyperuniform.py  gravity_point_process_2D.py  homogeneous_poisson_process.py  hyperuniformity.py  isotropic_estimator.py  isotropic_njit.py  multiscale_estimators.py  pair_correlation_function.py  plotting.py  point_pattern.py  point_process.py  point_processes.py  spatial_windows.py  spectral_estimator.py  spectral_estimators.py  statistics.py  structure_factor.py  structure_factor_new.py  taper.py  tapered_estimators.py  tapered_estimators_isotropic.py  tapered_periodograms.py  tapers.py  thomas_process.py  transforms.py  utils.py
src/structure_factor/data/: load_data.py
structure-factor/: structure_factor.py
tests/: debug_allowed_values_method.py  test_effective_heyperuniform.py  test_effective_hyperuniformity.py  test_hankel_transform_results_baddour_chouinard.py  test_hyperuniformity.py  test_mltiscale_estimators.py  test_ogata_integration_results.py  test_pair_correlation_function.py  test_point_processess.py  test_poisson_point_process.py  test_spatial_windows.py  test_spectral_estimator.py  test_structure_factor.py  test_taper.py  test_tapered_estimators.py  test_utils.py
