[tool.poetry]
name = "hypton"
version = "0.1.0"
description = ""
authors = ["dhawat <email@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
# poetry add name
rpy2 = "^3.4.4"
numpy = "^1.20.3"
scipy = "^1.6.3"
matplotlib = "^3.4.2"
pandas = "^1.2.4"

# poetry add name --optional
jupyter = { version = "^1.0.0", optional = true }
ipykernel = { version = "^5.5.3", optional = true }
Sphinx = { version = "^4.0.3", optional = true }
sphinx-rtd-theme = { version = "^0.5.2", optional = true }
sphinx-autobuild = { version = "^2021.3.14", optional = true }
sphinxcontrib-bibtex = { version = "^2.4.1", optional = true }

[tool.poetry.extras]
# poetry install -E name
notebook = ["jupyter", "ipykernel"]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "sphinxcontrib-bibtex",
]

[tool.poetry.dev-dependencies]
# poetry add name --dev
pytest = "^6.2.4"
pylint = "^2.8.2"
black = { version = "^21.5b1", allow-prereleases = true }
pytest-cov = "^2.12.1"
pytest-subtests = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# poetry run pytest --cov tests/
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
